--- a/qmt/services.html
+++ b/qmt/services.html
@@ -142,126 +142,130 @@
       </nav>
     </div>
 
-    <div class="container-fluid my-4 pb-4">
-      <div class="row">
-        <div class="container-fluid px-4 mx-lg-4">
-          <div class="col-12">
-            <h3 class="text-center text-white">
-              How can I help you on your spiritual journey?
-            </h3>
-            <h4 class="text-center text-light">Take a look at the ways we can use metaphysical tools for introspection.</h4>
+    <section id="heroSection">
+      <div class="jumbotron-fluid py-4">
+        <div class="row">
+          <div class="container-fluid px-4 mx-lg-4">
+            <div class="col-12">
+              <h3 class="text-center text-white">
+                How can I help you on your spiritual journey?
+              </h3>
+              <h4 class="text-center text-light">
+                Take a look at the ways we can use metaphysical tools for
+                introspection.
+              </h4>
+            </div>
           </div>
         </div>
-      </div>
-      <!--Cards-->
-      <div class="row px-4 mx-lg-4 text-center">
-        <div class="col-12 col-md-6 col-xl-3">
-          <div class="card bg-light p-3">
-            <h3>Tarot Readings</h3>
-            <p>
-              Tarot cards are used to gain insight, clarity, and achieve greater
-              control over and understanding of issues involving relationships,
-              life changes, family, career, health, spirituality, and dreams. I
-              use the tarot cards to confirm the answers I am seeing to your
-              questions.
-            </p>
+        <!--Cards-->
+        <div class="row px-4 mx-lg-4 text-center">
+          <div class="col-12 col-md-6 col-xl-3">
+            <div class="card bg-light p-3">
+              <h3>Tarot Readings</h3>
+              <p>
+                Tarot cards are used to gain insight, clarity, and achieve
+                greater control over and understanding of issues involving
+                relationships, life changes, family, career, health,
+                spirituality, and dreams. I use the tarot cards to confirm the
+                answers I am seeing to your questions.
+              </p>
+            </div>
+          </div>
+          <div class="col-12 col-md-6 col-xl-3">
+            <div class="card bg-light p-3">
+              <h3>Birth Charts</h3>
+              <p>
+                Lorem ipsum dolor, sit amet consectetur adipisicing elit. Labore
+                tempora incidunt est sunt nostrum necessitatibus aspernatur eius
+                blanditiis nesciunt corporis. Unde tempora exercitationem ipsum
+                eius, beatae nisi pariatur ducimus facilis!
+              </p>
+            </div>
+          </div>
+          <div class="col-12 col-md-6 col-xl-3">
+            <div class="card bg-light p-3">
+              <h3>Custom Spreads</h3>
+              <p>
+                Lorem ipsum dolor, sit amet consectetur adipisicing elit. Labore
+                tempora incidunt est sunt nostrum necessitatibus aspernatur eius
+                blanditiis nesciunt corporis. Unde tempora exercitationem ipsum
+                eius, beatae nisi pariatur ducimus facilis!
+              </p>
+            </div>
+          </div>
+          <div class="col-12 col-md-6 col-xl-3">
+            <div class="card bg-light p-3">
+              <h3>New/Full Moon Readings</h3>
+              <p>
+                Lorem ipsum dolor, sit amet consectetur adipisicing elit. Labore
+                tempora incidunt est sunt nostrum necessitatibus aspernatur eius
+                blanditiis nesciunt corporis. Unde tempora exercitationem ipsum
+                eius, beatae nisi pariatur ducimus facilis!
+              </p>
+            </div>
+          </div>
+          <div class="col-12 col-md-6 col-xl-3">
+            <div class="card bg-light p-3">
+              <h3>Numerology</h3>
+              <p>
+                Lorem ipsum dolor, sit amet consectetur adipisicing elit. Labore
+                tempora incidunt est sunt nostrum necessitatibus aspernatur eius
+                blanditiis nesciunt corporis. Unde tempora exercitationem ipsum
+                eius, beatae nisi pariatur ducimus facilis!
+              </p>
+            </div>
+          </div>
+          <div class="col-12 col-md-6 col-xl-3">
+            <div class="card bg-light p-3">
+              <h3>Personalized Affirmations</h3>
+              <p>
+                Lorem ipsum dolor, sit amet consectetur adipisicing elit. Labore
+                tempora incidunt est sunt nostrum necessitatibus aspernatur eius
+                blanditiis nesciunt corporis. Unde tempora exercitationem ipsum
+                eius, beatae nisi pariatur ducimus facilis!
+              </p>
+            </div>
+          </div>
+          <div class="col-12 col-md-6 col-xl-3">
+            <div class="card bg-light p-3">
+              <h3>Insightful Worksheets</h3>
+              <p>
+                Lorem ipsum dolor, sit amet consectetur adipisicing elit. Labore
+                tempora incidunt est sunt nostrum necessitatibus aspernatur eius
+                blanditiis nesciunt corporis. Unde tempora exercitationem ipsum
+                eius, beatae nisi pariatur ducimus facilis!
+              </p>
+            </div>
+          </div>
+          <div class="col-12 col-md-6 col-xl-3">
+            <div class="card bg-light p-3">
+              <h3>Community</h3>
+              <p>
+                Lorem ipsum dolor, sit amet consectetur adipisicing elit. Labore
+                tempora incidunt est sunt nostrum necessitatibus aspernatur eius
+                blanditiis nesciunt corporis. Unde tempora exercitationem ipsum
+                eius, beatae nisi pariatur ducimus facilis!
+              </p>
+            </div>
           </div>
         </div>
-        <div class="col-12 col-md-6 col-xl-3">
-          <div class="card bg-light p-3">
-            <h3>Birth Charts</h3>
-            <p>
-              Lorem ipsum dolor, sit amet consectetur adipisicing elit. Labore
-              tempora incidunt est sunt nostrum necessitatibus aspernatur eius
-              blanditiis nesciunt corporis. Unde tempora exercitationem ipsum
-              eius, beatae nisi pariatur ducimus facilis!
-            </p>
-          </div>
-        </div>
-        <div class="col-12 col-md-6 col-xl-3">
-          <div class="card bg-light p-3">
-            <h3>Custom Spreads</h3>
-            <p>
-              Lorem ipsum dolor, sit amet consectetur adipisicing elit. Labore
-              tempora incidunt est sunt nostrum necessitatibus aspernatur eius
-              blanditiis nesciunt corporis. Unde tempora exercitationem ipsum
-              eius, beatae nisi pariatur ducimus facilis!
-            </p>
-          </div>
-        </div>
-        <div class="col-12 col-md-6 col-xl-3">
-          <div class="card bg-light p-3">
-            <h3>New/Full Moon Readings</h3>
-            <p>
-              Lorem ipsum dolor, sit amet consectetur adipisicing elit. Labore
-              tempora incidunt est sunt nostrum necessitatibus aspernatur eius
-              blanditiis nesciunt corporis. Unde tempora exercitationem ipsum
-              eius, beatae nisi pariatur ducimus facilis!
-            </p>
-          </div>
-        </div>
-        <div class="col-12 col-md-6 col-xl-3">
-          <div class="card bg-light p-3">
-            <h3>Numerology</h3>
-            <p>
-              Lorem ipsum dolor, sit amet consectetur adipisicing elit. Labore
-              tempora incidunt est sunt nostrum necessitatibus aspernatur eius
-              blanditiis nesciunt corporis. Unde tempora exercitationem ipsum
-              eius, beatae nisi pariatur ducimus facilis!
-            </p>
-          </div>
-        </div>
-        <div class="col-12 col-md-6 col-xl-3">
-          <div class="card bg-light p-3">
-            <h3>Personalized Affirmations</h3>
-            <p>
-              Lorem ipsum dolor, sit amet consectetur adipisicing elit. Labore
-              tempora incidunt est sunt nostrum necessitatibus aspernatur eius
-              blanditiis nesciunt corporis. Unde tempora exercitationem ipsum
-              eius, beatae nisi pariatur ducimus facilis!
-            </p>
-          </div>
-        </div>
-        <div class="col-12 col-md-6 col-xl-3">
-          <div class="card bg-light p-3">
-            <h3>Insightful Worksheets</h3>
-            <p>
-              Lorem ipsum dolor, sit amet consectetur adipisicing elit. Labore
-              tempora incidunt est sunt nostrum necessitatibus aspernatur eius
-              blanditiis nesciunt corporis. Unde tempora exercitationem ipsum
-              eius, beatae nisi pariatur ducimus facilis!
-            </p>
-          </div>
-        </div>
-        <div class="col-12 col-md-6 col-xl-3">
-          <div class="card bg-light p-3">
-            <h3>Community</h3>
-            <p>
-              Lorem ipsum dolor, sit amet consectetur adipisicing elit. Labore
-              tempora incidunt est sunt nostrum necessitatibus aspernatur eius
-              blanditiis nesciunt corporis. Unde tempora exercitationem ipsum
-              eius, beatae nisi pariatur ducimus facilis!
-            </p>
-          </div>
-        </div>
-      </div>
 
-      <!--Payment-->
-      <div class="row pt-4 mx-lg-4 text-center text-light">
-        <div class="col-12 mt-4">
-          <p class="text-center">
-            Now offering multiple payment options:
-          </p>
-          <ul class="text-center list-unstyled">
-            <li>- FB Pay via Messenger (Joaly Nicole)</li>
-            <li>- paypal.me/queenmachete</li>
-            <li>- CashApp: $JoalyNicole</li>
-            <li>- Venmo: @Joaly-Cruz</li>
-          </ul>
+        <!--Payment-->
+        <div class="row pt-4 mx-lg-4 text-center text-light">
+          <div class="col-12 mt-4">
+            <p class="text-center">
+              Now offering multiple payment options:
+            </p>
+            <ul class="text-center list-unstyled">
+              <li>- FB Pay via Messenger (Joaly Nicole)</li>
+              <li>- paypal.me/queenmachete</li>
+              <li>- CashApp: $JoalyNicole</li>
+              <li>- Venmo: @Joaly-Cruz</li>
+            </ul>
+          </div>
         </div>
       </div>
-    </div>
-
+    </section>
     <!--------
     - FOOTER -
     --------->
