--- a/qmt/redesign.html
+++ b/qmt/redesign.html
@@ -152,7 +152,7 @@
     - HERO SECTION -
     --------------->
     <section id="heroSection">
-      <div class="jumbotron jumbotron-fluid text-center">
+      <div class="jumbotron mb-0 jumbotron-fluid text-center">
         <div class="container mx-auto">
           <h1 class="display-3 text-white pt-3">DISCOVER<br />YOUR TRUTH</h1>
           <p class="lead text-light">
@@ -165,91 +165,46 @@
       </div>
     </section>
 
-    <div class="bg-white container p-4 mb-5 mb-lg-0">
-      <!---------------
+    <!---------------
     - INTRO SECTION -
     ---------------->
-      <section id="introSection">
-        <!-- Two Columns -->
-        <div class="container p-4">
-          <div class="row px-lg-4 mx-lg-4">
-            <div class="col-lg-6 pt-md-4">
-              <h1 class="text-center text-lg-left">Divinely Guided</h1>
-              <ul class="intro-list">
-                <li>
-                  <svg
-                    width="80"
-                    height="80"
-                    viewBox="0 0 80 80"
-                    fill="none"
-                    xmlns="http://www.w3.org/2000/svg"
-                  >
-                    <path
-                      d="M23.0667 16.6667H16.6667L46.6667 46.6667L50 43.5333L23.0667 16.6667ZM66.5333 63.7333L63.7333 66.5333C63.425 66.8423 63.0587 67.0875 62.6554 67.2548C62.2522 67.422 61.8199 67.5081 61.3833 67.5081C60.9468 67.5081 60.5145 67.422 60.1113 67.2548C59.708 67.0875 59.3417 66.8423 59.0333 66.5333L48.6333 56.1333L39.7 65L35 60.3L39.7333 55.5667L10 25.8333V10H25.8333L55.5667 39.7333L60.3 35L65 39.7L56.1 48.6L66.5 59C67.8333 60.3333 67.8333 62.4333 66.5333 63.7333V63.7333Z"
-                      fill="#2B5C89"
-                    />
-                  </svg>
-                  Honest, direct readings
-                </li>
-                <li>
-                  <svg
-                    width="80"
-                    height="80"
-                    viewBox="0 0 80 80"
-                    fill="none"
-                    xmlns="http://www.w3.org/2000/svg"
-                  >
-                    <path
-                      d="M58.5599 31.44C58.5599 22.94 55.5399 12.8 55.4133 12.3733C55.2064 11.6873 54.7842 11.0861 54.209 10.6586C53.6339 10.2312 52.9365 10.0003 52.2199 10H27.7799C26.3099 10 25.0133 10.9633 24.5866 12.3733C24.4599 12.8 21.4399 22.94 21.4399 31.44C21.4399 40.5567 28.0533 48.1433 36.7299 49.6967L36.6666 50V63.3333H33.3333C32.4492 63.3333 31.6014 63.6845 30.9763 64.3096C30.3511 64.9348 29.9999 65.7826 29.9999 66.6667C29.9999 67.5507 30.3511 68.3986 30.9763 69.0237C31.6014 69.6488 32.4492 70 33.3333 70H46.6666C47.5507 70 48.3985 69.6488 49.0236 69.0237C49.6488 68.3986 49.9999 67.5507 49.9999 66.6667C49.9999 65.7826 49.6488 64.9348 49.0236 64.3096C48.3985 63.6845 47.5507 63.3333 46.6666 63.3333H43.3333V50L43.2699 49.6933C51.9466 48.14 58.5599 40.5567 58.5599 31.44V31.44ZM39.9999 43.3333C37.1799 43.3263 34.4542 42.3165 32.3102 40.4845C30.1662 38.6525 28.7435 36.1178 28.2966 33.3333H51.6999C51.2544 36.1178 49.8326 38.6529 47.689 40.485C45.5454 42.3172 42.8198 43.3268 39.9999 43.3333V43.3333ZM28.1499 30C28.3566 25.1067 29.5566 19.69 30.3266 16.6667H49.6699C50.4399 19.69 51.6399 25.1067 51.8466 30H28.1499Z"
-                      fill="#2B5C89"
-                    />
-                  </svg>
-                  Compassionate insight
-                </li>
-                <li>
-                  <svg
-                    width="80"
-                    height="80"
-                    viewBox="0 0 80 80"
-                    fill="none"
-                    xmlns="http://www.w3.org/2000/svg"
-                  >
-                    <path
-                      d="M36.6666 13.3333L34.9999 10L33.3332 13.3333L29.9999 13.75L32.7799 16.11L31.6666 20L34.9999 17.78L38.3332 20L37.2199 16.11L39.9999 13.75L36.6666 13.3333ZM64.4466 48.8867L61.6666 43.3333L58.8866 48.8867L53.3332 49.5833L57.9632 53.52L56.1132 60L61.6666 56.2967L67.2199 60L65.3699 53.52L69.9999 49.5833L64.4466 48.8867ZM22.2232 21.11L19.9999 16.6667L17.7766 21.11L13.3332 21.6667L17.0365 24.8133L15.5565 30L19.9999 27.0367L24.4432 30L22.9632 24.8133L26.6666 21.6667L22.2232 21.11ZM11.3799 56.6667C11.3799 58.4467 12.0732 60.12 13.3332 61.38L18.6199 66.6667C19.8799 67.9267 21.5532 68.62 23.3332 68.62C25.1132 68.62 26.7865 67.9267 28.0465 66.6667L66.6666 28.0467C67.9266 26.7867 68.6199 25.1133 68.6199 23.3333C68.6199 21.5533 67.9266 19.88 66.6666 18.62L61.3799 13.3333C58.8599 10.8133 54.4732 10.8133 51.9532 13.3333L13.3332 51.9533C12.0732 53.2133 11.3799 54.8867 11.3799 56.6667ZM56.6666 18.0467L61.9532 23.3333L49.9999 35.2867L44.7132 30L56.6666 18.0467Z"
-                      fill="#2B5C89"
-                    />
-                  </svg>
-                  Inspired, creative energy
-                </li>
-                <li>
-                  <svg
-                    width="80"
-                    height="65"
-                    viewBox="0 0 80 80"
-                    fill="none"
-                    xmlns="http://www.w3.org/2000/svg"
-                  >
-                    <path
-                      d="M11.3584 11.3585C6.24558 16.4714 3.42969 23.2694 3.42969 30.5001C3.42969 37.7307 6.24558 44.5289 11.3584 49.6418C16.4711 54.7547 23.2693 57.5703 30.5 57.5703C37.7307 57.5703 44.5286 54.7544 49.6417 49.6418C54.7547 44.5289 57.5703 37.7307 57.5703 30.5001C57.5703 23.2694 54.7544 16.4714 49.6417 11.3584C44.5286 6.24558 37.7307 3.42969 30.5 3.42969C23.2693 3.42969 16.4713 6.24558 11.3584 11.3585ZM6.40662 30.5001C6.40662 17.2149 17.2148 6.40662 30.5 6.40662C43.7851 6.40662 54.5934 17.2149 54.5934 30.5001C54.5934 43.7853 43.7851 54.5934 30.5 54.5934C17.2148 54.5934 6.40662 43.7853 6.40662 30.5001Z"
-                      fill="#2B5C89"
-                      stroke="#2B5C89"
-                      stroke-width="5"
-                    />
-                  </svg>
-                  Practical, grounded advice
-                </li>
-              </ul>
-            </div>
-            <div class="col-lg-6">
-              <img src="cards.png" class="img-fluid" alt="" />
-            </div>
+    <section id="introSection">
+      <!-- Two Columns -->
+      <div class="container-fluid p-4 bg-light">
+        <div class="container">
+          <div class="col-12 py-4 my-4">
+            <p style="font-size: 1.25rem;" class="my-4 text-secondary">
+              Queen Machete Tarot is a beacon of intuition, claicognizant gifts,
+              and metaphysical knowledge shedding light upon your unique path.
+              My calling is to empower you by guiding you to your deeper
+              questions so you can break free from the old patterns and wounds
+              that bind you. Working together, we can bring your challenges and
+              gifts into clear focus and affirm your own personal journey to
+              freedom.
+            </p>
           </div>
         </div>
-      </section>
-    </div>
-    <div class="bg-white container p-4 mb-5">
-      <div class="d-none d-lg-block linebreak"></div>
+      </div>
+    </section>
 
+    <!------------
+    - FIRST HOOK -
+    ------------->
+    <section id="firstHook">
+      <div
+        class="container-fluid photoHook d-flex flex-column justify-content-center align-items-center"
+      >
+        <h1 class="text-white text-uppercase pt-4">
+          Heal the Wounds That Bind You
+        </h1>
+        <p class="text-muted" style="font-size: 1.5rem;">
+          Tarot Readings and Community for Self-Empowerment & Self-Discovery.
+        </p>
+      </div>
+      <!-- Two Columns -->
+    </section>
+
+    <div class="bg-white container-fluid pb-5">
       <!----------------------
     - LONGER INTRO SECTION -
     ----------------------->
@@ -257,15 +212,19 @@
         <!-- Three Columns -->
         <div class="container text-center p-4">
           <div class="row">
-            <div class="col-12 px-4">
-              <h1>HEAL THE WOUNDS THAT BIND YOU</h1>
-              <h2>
-                Queen Machete Tarot is dedicated to helping you discover
-                clarity, reclaim your personal power, and embrace your true life
-                path.
-              </h2>
+            <div class="col-12 p-4">
+              <hr />
+              <h4>
+                You don’t want to work to make someone else’s dreams come true,
+                you want to honor your own. It is your birthright to be
+                liberated in this lifetime, but it is a journey that no one
+                person can do alone.
+              </h4>
+
+              <hr />
             </div>
-            <div class="row w-100 mx-auto my-2 my-lg-4 pt-lg-4">
+
+            <div class="row w-100 mx-auto my-2 my-lg-4 pt-lg-2">
               <div class="col-md-4 my-4 my-lg-0">
                 <img src="tarot.png" class="mb-3" />
                 <p>
@@ -295,15 +254,32 @@
         </div>
       </section>
     </div>
+    <!------------
+    - SECOND HOOK -
+    -------------->
+    <section id="secondHook">
+      <div
+        class="container-fluid photoHook d-flex flex-column justify-content-center align-items-center"
+      >
+        <h1 class="text-white text-uppercase pt-4">
+          Queen Machete Tarot
+        </h1>
+        <p class="text-light" style="font-size: 1.5rem;">
+          is dedicated to helping you discover clarity, reclaim your personal
+          power, and embrace your true life path.
+        </p>
+      </div>
+      <!-- Two Columns -->
+    </section>
 
     <!----------------------
     - TESTIMONIALS SECTION -
     ----------------------->
     <section id="testimonialsSection">
-      <div class="container p-0">
-        <div class="bg-purple mt-4">
+      <div class="container-fluid bg-purple px-4">
+        <div class="p-4">
           <div class="py-lg-4">
-            <div class="row m-0 py-4">
+            <div class="row m-0 p-4">
               <div class="col-lg-7 p-0 p-lg-4 order-2 order-lg-1">
                 <div class="testimonials w-100">
                   <div class="container testimonials pb-4">
@@ -496,7 +472,7 @@
               </div>
 
               <div
-                class="col-lg-5 text-white text-center text-lg-left mt-4 order-1 d-flex flex-column mt-lg-4"
+                class="col-lg-5 text-white text-center text-lg-left mt-4 order-1 d-flex flex-column mt-lg-4 pr-lg-5"
               >
                 <h1>DOZENS OF FIVE STAR REVIEWS</h1>
                 <p class="lead text-light">
