--- a/qmt/redesign.html
+++ b/qmt/redesign.html
@@ -276,8 +276,8 @@
     - TESTIMONIALS SECTION -
     ----------------------->
     <section id="testimonialsSection">
-      <div class="container-fluid bg-purple px-4">
-        <div class="p-4">
+      <div class="container-fluid bg-purple px-0 px-lg-4">
+        <div class="p-lg-4">
           <div class="py-lg-4">
             <div class="row m-0 p-4">
               <div class="col-lg-7 p-0 p-lg-4 order-2 order-lg-1">
