--- a/qmt/index.html
+++ b/qmt/index.html
@@ -283,7 +283,7 @@
                 <button class="btn btn-secondary">Learn More</button>
               </div>
               <div class="col-md-4 my-4 my-lg-0">
-                <img src="crown.svg" class="mb-3" />
+                <img src="crystal.png" class="mb-3" />
                 <p>
                   Together we can use introspection and self-reflection to
                   unlock your destiny and change your life.
