--- a/qmt/redesign.html
+++ b/qmt/redesign.html
@@ -390,7 +390,7 @@
                 </blockquote>
               </div>
             </div>
-            <div class="col-12 col-lg-8 text-center bg-white pt-4 mt-2 mt-lg-0">
+            <div class="col-12 col-lg-8 text-center bg-white pt-4 mt-2 mt-lg-0 rounded">
               <img
                 width="150"
                 height="auto"
