--- a/index.html
+++ b/index.html
@@ -169,6 +169,9 @@
       -- SERVICES SECTION --
       --------------------->
       <section id="awareness_section bg-white">
+        <!--------------------
+        --- Services Intro ---
+        --------------------->
         <div class="py-4 mt-3 mx-auto col-12 col-md-8 w-lg-100">
           <h2 class="caption-header header-small mb-0 font-weight-bold">
             We help you connect with your
@@ -184,49 +187,96 @@
             incidunt.
           </p>
         </div>
+        <!--LINE-->
         <hr class="container-fluid p-0" />
+        <!--------------------
+        --- Services Cards ---
+        --------------------->
         <div class="pt-0  px-4 pb-4 pt-md-4 text-center container">
-          <div class="row">
+          <div class="row justify-content-center">
+            <!--Holistic Businesses-->
             <div class="audience col-md-4">
-              <i
-                class="fab fa-pagelines display-4 text-center"
-                style="background: -webkit-linear-gradient(#65ce24, #3c7a16);
+              <div class="card py-4">
+                <i
+                  class="fab fa-pagelines display-4 text-center"
+                  style="background: -webkit-linear-gradient(#65ce24, #3c7a16);
               -webkit-background-clip: text;
               -webkit-text-fill-color: transparent;"
-              ></i>
-              <p class="lead mt-2">
-                Holistic Businesses
-              </p>
+                ></i>
+                <p class="lead mt-2">
+                  Holistic Businesses
+                </p>
+              </div>
             </div>
+
+            <!--Alternative Practices-->
             <div class="audience col-md-4">
-              <i
-                class="fas fa-moon display-4 py-2"
-                style="background: -webkit-linear-gradient(rgb(176, 80, 255), #9320fe);
+              <div class="card py-4">
+                <i
+                  class="fas fa-moon display-4"
+                  style="background: -webkit-linear-gradient(rgb(176, 80, 255), #9320fe);
               -webkit-background-clip: text;
               -webkit-text-fill-color: transparent;"
-              ></i>
-              <p class="lead mt-2">
-                Alternative Practices
-              </p>
+                ></i>
+                <p class="lead mt-2">
+                  Alternative Practices
+                </p>
+              </div>
             </div>
+
+            <!--Holistic Businesses-->
             <div class="audience col-md-4">
-              <i
-                class="fas fa-star display-4 py-2"
-                style="background: -webkit-linear-gradient(#ffd250, #feaa20);
+              <div class="card py-4">
+                <i
+                  class="fas fa-star display-4"
+                  style="background: -webkit-linear-gradient(#ffd250, #feaa20);
               -webkit-background-clip: text;
               -webkit-text-fill-color: transparent;"
-              ></i>
-              <p class="lead mt-2">
-                Holistic Businesses
-              </p>
+                ></i>
+                <p class="lead mt-2">
+                  Holistic Businesses
+                </p>
+              </div>
+            </div>
+
+            <!--Holistic Businesses-->
+            <div class="audience col-md-4">
+              <div class="card py-4">
+                <i
+                  class="fas fa-star display-4"
+                  style="background: -webkit-linear-gradient(#ffd250, #feaa20);
+              -webkit-background-clip: text;
+              -webkit-text-fill-color: transparent;"
+                ></i>
+                <p class="lead mt-2">
+                  Holistic Businesses
+                </p>
+              </div>
+            </div>
+
+            <!--Holistic Businesses-->
+            <div class="audience col-md-4">
+              <div class="card py-4">
+                <i
+                  class="fas fa-star display-4"
+                  style="background: -webkit-linear-gradient(#ffd250, #feaa20);
+              -webkit-background-clip: text;
+              -webkit-text-fill-color: transparent;"
+                ></i>
+                <p class="lead mt-2">
+                  Holistic Businesses
+                </p>
+              </div>
             </div>
           </div>
         </div>
       </section>
+
+
       <!--------------------
       -- SERVICES SECTION --
       --------------------->
-      <section id="services_section">
+      <!-- <section id="services_section">
         <div class="p-4 bg-dark">
           <div class="row mx-0 text-center">
             <div class="col-lg-4 my-3">
@@ -286,14 +336,14 @@
             </div>
           </div>
         </div>
-      </section>
+      </section> -->
 
       <!-----------------
       -- INTRO SECTION --
       ------------------>
       <section>
-        <div class="container-fluid bg-light">
-          <div class="block moon-block bg-light">
+        <div class="container-fluid bg-dark py-4">
+          <div class="block moon-block bg-light my-4 rounded">
             <div class="row">
               <div
                 class="col-8 col-md-5 text-center text-md-right order-md-2 mx-auto"
