--- a/index.html
+++ b/index.html
@@ -188,90 +188,89 @@
           </p>
         </div>
         <!--LINE-->
-        <hr class="container-fluid p-0" />
+        <hr class="container-fluid p-0 my-0" />
         <!--------------------
         --- Services Cards ---
         --------------------->
         <div class="pt-0  px-4 pb-4 pt-md-4 text-center container">
           <div class="row justify-content-center">
-            <!--Holistic Businesses-->
+            <!--Intuitive Websites-->
             <div class="audience col-md-4">
-              <div class="card py-4">
+              <div class="card py-4 shadow">
                 <i
                   class="fab fa-pagelines display-4 text-center"
-                  style="background: -webkit-linear-gradient(#65ce24, #3c7a16);
-              -webkit-background-clip: text;
-              -webkit-text-fill-color: transparent;"
+                  style="background: -webkit-linear-gradient(#65ce24, #165016);
+                  -webkit-background-clip: text;
+                  -webkit-text-fill-color: transparent;"
                 ></i>
                 <p class="lead mt-2">
-                  Holistic Businesses
+                  Intuitive Websites
                 </p>
               </div>
             </div>
 
-            <!--Alternative Practices-->
+            <!--Branding/Design-->
             <div class="audience col-md-4">
-              <div class="card py-4">
+              <div class="card py-4 shadow">
                 <i
                   class="fas fa-moon display-4"
-                  style="background: -webkit-linear-gradient(rgb(176, 80, 255), #9320fe);
+                  style="background: -webkit-linear-gradient(90deg, #9564DF, #5A2CA0);
               -webkit-background-clip: text;
               -webkit-text-fill-color: transparent;"
                 ></i>
                 <p class="lead mt-2">
-                  Alternative Practices
+                  Branding/Design
                 </p>
               </div>
             </div>
 
-            <!--Holistic Businesses-->
+            <!--Creative Content-->
             <div class="audience col-md-4">
-              <div class="card py-4">
+              <div class="card py-4 shadow">
                 <i
                   class="fas fa-star display-4"
-                  style="background: -webkit-linear-gradient(#ffd250, #feaa20);
+                  style="background: -webkit-linear-gradient(90deg, #FFD52D, rgb(243, 166, 22));
               -webkit-background-clip: text;
               -webkit-text-fill-color: transparent;"
                 ></i>
                 <p class="lead mt-2">
-                  Holistic Businesses
+                  Creative Content
                 </p>
               </div>
             </div>
 
-            <!--Holistic Businesses-->
+            <!--Social Media-->
             <div class="audience col-md-4">
-              <div class="card py-4">
+              <div class="card py-4 shadow">
                 <i
-                  class="fas fa-star display-4"
-                  style="background: -webkit-linear-gradient(#ffd250, #feaa20);
+                  class="fas fa-laptop display-4"
+                  style="background: -webkit-linear-gradient(120deg, rgb(36, 36, 36), rgb(150, 148, 148));
               -webkit-background-clip: text;
               -webkit-text-fill-color: transparent;"
                 ></i>
                 <p class="lead mt-2">
-                  Holistic Businesses
+                  Social Media
                 </p>
               </div>
             </div>
 
-            <!--Holistic Businesses-->
+            <!--Marketing Strategy-->
             <div class="audience col-md-4">
-              <div class="card py-4">
+              <div class="card py-4 shadow">
                 <i
-                  class="fas fa-star display-4"
-                  style="background: -webkit-linear-gradient(#ffd250, #feaa20);
+                  class="fas fa-hat-wizard display-4"
+                  style="background: -webkit-linear-gradient(#509cff, #5020fe);
               -webkit-background-clip: text;
               -webkit-text-fill-color: transparent;"
                 ></i>
                 <p class="lead mt-2">
-                  Holistic Businesses
+                  Marketing Magic
                 </p>
               </div>
             </div>
           </div>
         </div>
       </section>
-
 
       <!--------------------
       -- SERVICES SECTION --
@@ -342,16 +341,16 @@
       -- INTRO SECTION --
       ------------------>
       <section>
-        <div class="container-fluid bg-dark py-4">
-          <div class="block moon-block bg-light my-4 rounded">
+        <div
+          class="container-fluid py-2 py-lg-4"
+          style="background: linear-gradient(rgba(255, 255, 255, 0.6), rgba(255, 255, 255, 0.6)), url(https://publicdomainvectors.org/photos/SpacePattern3.png); background-size: 25%; background-position: center; background-attachment: fixed;"
+        >
+          <div class="block moon-block rounded">
             <div class="row">
               <div
-                class="col-8 col-md-5 text-center text-md-right order-md-2 mx-auto"
+                class="col-md-12 mt-md-0 mx-auto px-4 py-2 rounded text-light shadow"
+                style="background: #2F2F2F;"
               >
-                <img class="img-fluid" src="moon.png" />
-              </div>
-
-              <div class="col-md-7 mt-5 mt-md-0">
                 <p class="lead" style="line-height: 1;">
                   We approach web design as a
                   <span
