--- a/qmt/testimonials.html
+++ b/qmt/testimonials.html
@@ -405,13 +405,12 @@
     <!--------
     - FOOTER -
     --------->
-    <!-- Footer -->
     <footer class="page-footer font-small">
       <!------------------
     - DONATION SECTION -
     ------------------->
       <section id="donationSection">
-        <div class=" container-fluid py-2 px-4 bg-light">
+        <div class=" container-fluid py-2 px-4 bg-trans">
           <div class="container">
             <div class="row align-items-center text-center">
               <div class="col-md-3">
@@ -473,7 +472,7 @@
       </section>
 
       <!-- Social buttons -->
-      <ul class="list-unstyled list-inline text-center pt-4">
+      <ul class="list-unstyled list-inline text-center p-3 mb-0 bg-purple">
         <li class="list-inline-item">
           <a class="btn-floating btn-fb mx-1">
             <a
