--- a/qmt/services.html
+++ b/qmt/services.html
@@ -144,7 +144,7 @@
 
     <section id="heroSection">
       <div class="jumbotron-fluid py-4">
-        <div class="row">
+        <div class="row m-0">
           <div class="container-fluid px-4 mx-lg-4">
             <div class="col-12">
               <h3 class="text-center text-white">
@@ -158,7 +158,7 @@
           </div>
         </div>
         <!--Cards-->
-        <div class="row px-4 mx-lg-4 text-center">
+        <div class="row px-4 m-0 mx-lg-4 text-center">
           <div class="col-12 col-md-6 col-xl-3">
             <div class="card bg-light p-3">
               <h3>Tarot Readings</h3>
@@ -169,17 +169,9 @@
                 spirituality, and dreams. I use the tarot cards to confirm the
                 answers I am seeing to your questions.
               </p>
-            </div>
-          </div>
-          <div class="col-12 col-md-6 col-xl-3">
-            <div class="card bg-light p-3">
-              <h3>Birth Charts</h3>
-              <p>
-                Lorem ipsum dolor, sit amet consectetur adipisicing elit. Labore
-                tempora incidunt est sunt nostrum necessitatibus aspernatur eius
-                blanditiis nesciunt corporis. Unde tempora exercitationem ipsum
-                eius, beatae nisi pariatur ducimus facilis!
-              </p>
+              <button class="btn btn-3">
+                <a href="#" class="text-white">Learn More</a>
+              </button>
             </div>
           </div>
           <div class="col-12 col-md-6 col-xl-3">
@@ -191,17 +183,35 @@
                 blanditiis nesciunt corporis. Unde tempora exercitationem ipsum
                 eius, beatae nisi pariatur ducimus facilis!
               </p>
+              <button class="btn btn-3">
+                <a href="#" class="text-white">Learn More</a>
+              </button>
             </div>
           </div>
           <div class="col-12 col-md-6 col-xl-3">
             <div class="card bg-light p-3">
               <h3>New/Full Moon Readings</h3>
               <p>
-                Lorem ipsum dolor, sit amet consectetur adipisicing elit. Labore
-                tempora incidunt est sunt nostrum necessitatibus aspernatur eius
-                blanditiis nesciunt corporis. Unde tempora exercitationem ipsum
-                eius, beatae nisi pariatur ducimus facilis!
+                Take advantage of the energetically heightened times of the
+                month and align yourself with the powerful magic of the lunar
+                cycle.
               </p>
+              <button class="btn btn-3">
+                <a href="#" class="text-white">Learn More</a>
+              </button>
+            </div>
+          </div>
+          <div class="col-12 col-md-6 col-xl-3">
+            <div class="card bg-light p-3">
+              <h3>Subscription Packages</h3>
+              <p>
+                Make a commitment to your spiritual growth with cost-effective
+                subscription packages. Build a custom package that suits your
+                needs <em>and</em> your budget.
+              </p>
+              <button class="btn btn-3">
+                <a href="#" class="text-white">Learn More</a>
+              </button>
             </div>
           </div>
           <div class="col-12 col-md-6 col-xl-3">
@@ -213,6 +223,9 @@
                 blanditiis nesciunt corporis. Unde tempora exercitationem ipsum
                 eius, beatae nisi pariatur ducimus facilis!
               </p>
+              <button class="btn btn-3">
+                <a href="#" class="text-white">Learn More</a>
+              </button>
             </div>
           </div>
           <div class="col-12 col-md-6 col-xl-3">
@@ -224,17 +237,23 @@
                 blanditiis nesciunt corporis. Unde tempora exercitationem ipsum
                 eius, beatae nisi pariatur ducimus facilis!
               </p>
+              <button class="btn btn-3">
+                <a href="#" class="text-white">Learn More</a>
+              </button>
             </div>
           </div>
           <div class="col-12 col-md-6 col-xl-3">
             <div class="card bg-light p-3">
-              <h3>Insightful Worksheets</h3>
+              <h3>Birth Charts</h3>
               <p>
                 Lorem ipsum dolor, sit amet consectetur adipisicing elit. Labore
                 tempora incidunt est sunt nostrum necessitatibus aspernatur eius
                 blanditiis nesciunt corporis. Unde tempora exercitationem ipsum
                 eius, beatae nisi pariatur ducimus facilis!
               </p>
+              <button class="btn btn-3">
+                <a href="#" class="text-white">Learn More</a>
+              </button>
             </div>
           </div>
           <div class="col-12 col-md-6 col-xl-3">
@@ -246,12 +265,15 @@
                 blanditiis nesciunt corporis. Unde tempora exercitationem ipsum
                 eius, beatae nisi pariatur ducimus facilis!
               </p>
+              <button class="btn btn-3">
+                <a href="#" class="text-white">Learn More</a>
+              </button>
             </div>
           </div>
         </div>
 
         <!--Payment-->
-        <div class="row pt-4 mx-lg-4 text-center text-light">
+        <div class="row pt-4 m-0 mx-lg-4 text-center text-light">
           <div class="col-12 mt-4">
             <p class="text-center">
               Now offering multiple payment options:
@@ -300,7 +322,7 @@
       <!-- <hr /> -->
 
       <!-- Social buttons -->
-      <ul class="list-unstyled list-inline text-center">
+      <ul class="list-unstyled list-inline text-center bg-purple py-3 mb-0">
         <li class="list-inline-item">
           <a class="btn-floating btn-fb mx-1">
             <a
@@ -325,3 +347,38 @@
     <!-- Footer -->
   </body>
 </html>
+<style>
+  .card button {
+    margin-top: auto;
+  }
+
+  .btn {
+    z-index: 88;
+    flex: 1 1 auto;
+    margin: 10px auto;
+    padding: 10px 40px;
+    max-height: 50px;
+    max-width: 200px;
+    text-align: center;
+    text-transform: uppercase;
+    transition: 0.5s;
+    background-size: 200% auto;
+    color: white;
+    /* text-shadow: 0px 0px 10px rgba(0,0,0,0.2);*/
+    box-shadow: 0 0 20px #eee;
+    border-radius: 10px;
+  }
+
+  .btn:hover {
+    background-position: right center; /* change the direction of the change here */
+  }
+
+  .btn-3 {
+    background-image: linear-gradient(
+      to right,
+      #23d9f1d2 0%,
+      #c29dff 51%,
+      #23d9f1d2 100%
+    );
+  }
+</style>
