--- a/zodiac/index.html
+++ b/zodiac/index.html
@@ -105,9 +105,9 @@
             document.write(new Date().getFullYear());
           </script>
            Designed by
-          <a href="esoether.com" target="_blank">Esoether</a>.
+          <a href="https://esoether.com" target="_blank">Esoether</a>.
           Coded by
-          <a href="esoether.com" target="_blank"
+          <a href="https://noellekinseydev.github.io" target="_blank"
             >Noelle Horton</a
           >.
         </div>
